todo-app-backend-get-tasks/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-task
  namespace: gagan
spec:
  replicas: 2
  selector:
    matchLabels:
      app: get-task
  template:
    metadata:
      labels:
        app: get-task
    spec:
      containers:
      - name: get-task
        image: devopsinsiders/get-tasks
        ports:
        - containerPort: 8000
