todo-app-backend-get-tasks/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gettask-ingress
  namespace: gagan
  annotations:
    # kubernetes.io/ingress.class: addon-http-application-routing
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: gettaskservice.gaggidevops.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gettaskservice
            port: 
              number: 80
